--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,9 @@
 
 // custom
 @import 'custom/modal.scss';
+@import 'custom/bordered_table.scss';
+
+@import 'vue_transition';
 
 $font-family-sans-serif: Poppins, sans-serif;
 $font-size-base: 0.875rem;
@@ -20,6 +23,45 @@ $font-size-base: 0.875rem;
 body {
   font-family: $font-family-sans-serif !important;
   font-size: $font-size-base;
+
+  .table-hover {
+    tbody {
+      tr {
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.055) !important;
+        }
+      }
+    }
+  }
+
+  .table-striped {
+    tbody {
+      tr {
+        &:nth-of-type(even) {
+          background-color: rgba(0, 0, 0, 0.0275);
+        }
+        &:nth-of-type(odd) {
+          background-color: rgba(0, 0, 0, 0.0175);
+        }
+      }
+    }
+  }
+
+  .table-responsive {
+    &::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    &::-webkit-scrollbar-track-piece {
+      background-color: rgb(243, 244, 245);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #cecece;
+      border-radius: 2px;
+    }
+  }
 
   &::-webkit-scrollbar {
     width: 8px;
@@ -36,14 +78,26 @@ body {
   }
 }
 
+.bg-faded {
+  background-color: var(--bg-gray-light);
+}
+
+.border-faded {
+  border-color: var(--bg-gray-light) !important;
+}
+
 .fs-lg {
   font-size: 1rem !important;
 }
 
+.fs-md {
+  font-size: $font-size-base !important;
+}
+
 .fs-sm {
-  font-size: .725rem;
+  font-size: .725rem !important;
 }
 
 .fs-nano {
-  font-size: .625rem;
+  font-size: .625rem !important;
 }
