--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -112,3 +112,19 @@ body {
 .fs-nano {
   font-size: .625rem !important;
 }
+
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
+.cursor-auto {
+  cursor: auto !important;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed !important;
+}
+
+.cursor-default {
+  cursor: default;
+}
