fix(config): routing strategy for subdirectory domain

--- a/resources/sass/landing.app.scss
+++ b/resources/sass/landing.app.scss
@@ -36,3 +36,12 @@ body {
 .pointer {
   cursor: pointer;
 }
+
+.mb-xxl {
+  margin-bottom: 10rem;
+}
+
+.round_true {
+  border-radius: 40px;
+  line-height: 2;
+}
